# homeassistant-realtime-voice-component

./: .gitignore  README.md  pyproject.toml
homeassistant_realtime_voice/: __init__.py  __main__.py  audio.py  cli.py  const.py  pipeline.py  prompt.py  provision.py  realtime.py  server.py  stt.py  tools.py  tts.py
homeassistant_realtime_voice_component/: __init__.py  manifest.json  strings.json  stt.py  tts.py
tests/: test_audio.py  test_prompt.py  test_realtime.py  test_tools.py
