[project]
name = "homeassistant-realtime-voice"
version = "0.1.0"
description = "OpenAI Realtime API voice facade for Home Assistant"
requires-python = ">=3.12"
dependencies = ["aiohttp>=3.9.0"]

[project.optional-dependencies]
cli = ["typer>=0.9", "bleak>=0.21", "websockets>=13"]
test = ["pytest>=7", "pytest-asyncio>=0.21"]

[project.scripts]
ha-realtime-voice = "homeassistant_realtime_voice.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["homeassistant_realtime_voice", "homeassistant_realtime_voice_component"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
